--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,48 @@ services:
       timeout: 5s
       retries: 5
 
+  wisefido-data:
+    build:
+      context: .
+      dockerfile: ./wisefido-data/Dockerfile
+    container_name: owl-wisefido-data
+    ports:
+      - "8080:8080"
+    environment:
+      # HTTP 配置
+      - HTTP_ADDR=:8080
+      # 数据库配置
+      - DB_ENABLED=true
+      - DB_HOST=postgresql
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - DB_NAME=owlrd
+      - DB_SSLMODE=disable
+      # Redis 配置
+      - REDIS_ADDR=redis:6379
+      - REDIS_PASSWORD=
+      - REDIS_DB=0
+      # Doctor 配置（诊断功能）
+      - DOCTOR_ENABLED=true
+      - DOCTOR_PPROF=false
+      # 日志配置
+      - LOG_LEVEL=info
+      - LOG_FORMAT=json
+      # 系统管理员种子
+      - SEED_SYSADMIN=true
+    depends_on:
+      postgresql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8080/healthz || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
 volumes:
   postgres_data:
   redis_data:
